[gd_scene load_steps=8 format=2]

[ext_resource path="res://videos/1-Uvod.webm" type="VideoStream" id=1]
[ext_resource path="res://Seq1.gd" type="Script" id=2]
[ext_resource path="res://images/text0.png" type="Texture" id=3]
[ext_resource path="res://interImg.gd" type="Script" id=4]
[ext_resource path="res://images/text2.png" type="Texture" id=5]
[ext_resource path="res://videos/00.webm" type="VideoStream" id=6]
[ext_resource path="res://leftImageFix.gd" type="Script" id=7]

[node name="HBoxContainer" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -270.0
margin_right = 960.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftImage" type="TextureRect" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 540.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftVideo" type="VideoPlayer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stream = ExtResource( 1 )
autoplay = true
buffering_msec = 600

[node name="rightVideo" type="VideoPlayer" parent="."]
visible = false
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 540.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stream = ExtResource( 6 )

[node name="rightImage" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 960.0
margin_right = 1920.0
margin_bottom = 540.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 55.0
one_shot = true

[node name="Timer3" type="Timer" parent="."]

[connection signal="img_clicked" from="leftImage" to="." method="_on_leftImage_img_clicked"]
[connection signal="mouse_entered" from="leftImage" to="leftImage" method="_on_leftImage_mouse_entered"]
[connection signal="mouse_exited" from="leftImage" to="leftImage" method="_on_leftImage_mouse_exited"]
[connection signal="finished" from="leftVideo" to="." method="_on_leftVideo_finished"]
[connection signal="finished" from="rightVideo" to="." method="_on_rightVideo_finished"]
[connection signal="img_clicked" from="rightImage" to="." method="_on_rightImage_img_clicked"]
[connection signal="mouse_entered" from="rightImage" to="rightImage" method="_on_rightImage_mouse_entered"]
[connection signal="mouse_exited" from="rightImage" to="rightImage" method="_on_rightImage_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
